# GIEBEE_final

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERCEL.md  README.md  TODO.md  check_local_db.py  currency_converter.py  database.py  desktop_app.py  inject_item.py  inspect_render.py  main.py  migrate_db.py  models.py  pyproject.toml  render.yaml  repair_db.py  replit.md  requirements.txt  scan_backups.py  schema.sql  setup.py  sync_log.txt  sync_to_render.py  vercel.json
attached_assets/: Pasted-ValueError-ValueError-CASH-is-not-a-valid-PaymentType-Traceback-most-recent-call-last-File-1758449322030_1758449322031.txt  _1758447602904.replit  main_1758447602905.py  models_1758447602905.py  pyproject_1758447602905.toml  replit_1758447602906.md
backups/: backup_20260119_093257_database.db  backup_20260119_104823_database.db  backup_20260119_120109_database.db
data/: activities.xlsx  activity_types.xlsx  custom_fields.xlsx  customers.xlsx  financial_categories.xlsx  financial_records.xlsx  fuel_records.xlsx  inventory.xlsx  invoice_items.xlsx  invoices.xlsx  journey_records.xlsx  locations.xlsx  mileage_records.xlsx  pricing.xlsx  stock_transactions.xlsx  suppliers.xlsx
templates/: activities.html  activity_types.html  add_activity.html  add_activity_type.html  add_customer.html  add_financial_category.html  add_financial_record.html  add_fuel_record.html  add_inventory.html  add_invoice.html  add_journey_record.html  add_location.html  add_mileage_record.html  add_payment.html  add_pricing.html  add_supplier.html  base.html  customers.html  dashboard.html  (+13 more)
(+2 files in other folders)
